fix: more contrast for better accessibility

--- a/static/css/emmett.css
+++ b/static/css/emmett.css
@@ -4,7 +4,7 @@
   --text: #444;
   --accent: #a10032;
   --accent-text: var(--bg);
-  --link: #2a6c8a;
+  --link: #14536b;
   --mono-font: Consolas, Menlo, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
   --sans-font: -apple-system, BlinkMacSystemFont, "Avenir Next", Avenir,
     "Nimbus Sans L", Roboto, "Noto Sans", "Segoe UI", Arial, Helvetica,
